# qfa-toolkit

./: .gitignore  LICENSE  Makefile  README.md  document.md  jupytext.toml  pyproject.toml
benchmark/: README.md  interface.py  tmp.py  wrapper.py
results/: 23_1.json  23_10.json  23_11.json  23_12.json  23_13.json  23_2.json  23_3.json  23_4.json  23_5.json  23_6.json  23_7.json  23_8.json  23_9.json  3_0.json  3_1.json  3_10.json  3_10_observed.json  3_11.json  3_11_observed.json  3_12.json  3_12_observed.json  3_13.json  3_13_observed.json  3_14.json  3_14_observed.json  3_15.json  3_15_observed.json  3_16.json  3_16_observed.json  3_17.json  3_17_observed.json  3_18.json  3_18_observed.json  3_19.json  3_19_observed.json  3_1_observed.json  3_2.json  3_2_observed.json  3_3.json  3_3_observed.json  (+50 more)
src/: qfa.py  strategy.py
test/: strategy_test.py  test_quantum_finite_automaton.py  test_quantum_finite_automaton_language.py  test_recognition_strategy.py  test_strategy.py  utils.py
tests/: test_measure_many_quantum_finite_automaton.py  test_measure_many_quantum_finite_automaton_language.py  test_measure_many_quantum_finite_state_automaton.py  test_measure_many_quantum_finite_state_automaton_language.py  test_measure_once_quantum_finite_automaton.py  test_measure_once_quantum_finite_automaton_language.py  test_measure_once_quantum_finite_state_automaton.py  test_measure_once_quantum_finite_state_automaton_language.py  test_measure_onece_quantum_finite_automaton.py  test_qiskit_circuit.py  test_quantum_finite_automaton_language.py  test_recognition_strategy.py  (+1 more)
(+1293 files in other folders)
