[build-system]
requires = ["setuptools"]

[project]
name = "qfa-toolkit"
authors = [
  {name = "SeungYeop Baik", email = "sybaik2006@gmail.com"},
  {name = "Sicheol Sung", email = "sicheol.sung@yonsei.ac.kr"},
  {name = "Sungmin Kim", email = "rena_rio@yonsei.ac.kr"},
]
dependencies = [
  "numpy~=1.26.3",
  "scipy~=1.12.0",
  "qiskit~=1.0.0",
  "qiskit-ibm-runtime~=0.20.0"
]
optional-dependencies.dev = [ "mypy~=1.8.0" ]
version = "0.0.1"

# mypy global options:

[tool.mypy]
python_version = "3.9"
mypy_path = "src"
# warn_return_any = true
# warn_unused_configs = true
# plugins = "numpy.typing.mypy_plugin"
